--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: codecov/codecov-action@v1
+    - name: Flake8 action
+      # You may pin to the exact commit or the version.
+      # uses: suo/flake8-github-action@3e87882219642e01aa8a6bbd03b4b0adb8542c2a
+      uses: suo/flake8-github-action@v1
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
       with:
@@ -44,6 +48,6 @@ jobs:
         token: ${{ secrets.CODECOV_TOKEN }}
         # Path to coverage file to upload
         file: ./coverage.xml
-    
+        
 
 
