--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pytest-cov
+        pip install flake8
         pip install -r requirements.txt
     - name: Run Tests
       run: |
@@ -44,6 +45,9 @@ jobs:
         token: ${{ secrets.CODECOV_TOKEN }}
         # Path to coverage file to upload
         file: ./coverage.xml
+    - name: Flake8 action
+      uses: suo/flake8-github-action@v1
+      with:
+        checkName: 'build' 
     
-
 
