--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,25 +17,25 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.6]
+        node-version: ['12']
 
     steps:
     - uses: actions/checkout@v2
     - uses: codecov/codecov-action@v1
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
+    - name: Set up Node ${{matrix.node-version}}
+      uses: actions/setup-node@v1
       with:
-        python-version: ${{ matrix.python-version }}
+        node-version: ${{matrix.node-version}}
+
 
     - name: Install Dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install pytest-cov
-        pip install flake8
-        pip install -r requirements.txt
-    - name: Run Tests
+        npm install
+    - name: Test + Coverage - Jest
+      working-directory: ./letsdecide
       run: |
-        pytest -v --cov=./ --cov-report=xml
+        npm install
+        npm test -- --watchAll=false --coverage
     - name: Codecov
       uses: codecov/codecov-action@v1.0.13
       with:
@@ -44,10 +44,6 @@ jobs:
         # Repository upload token - get it from codecov.io. Required only for private repositories
         token: ${{ secrets.CODECOV_TOKEN }}
         # Path to coverage file to upload
-        file: ./coverage.xml
-    - name: Flake8 action
-      uses: suo/flake8-github-action@v1
-      with:
-        checkName: 'build' 
+        file: ./letsdecide/coverage/clover.xml,./letsdecide/coverage/lcov.info
     
 
