--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,10 @@ jobs:
       run: |
         npm install
         npm test -- --watchAll=false --coverage
+        
+    - name: StandardJS lint checks
+      uses: goto-bus-stop/standard-action@v1.0.3
+
     - name: Codecov
       uses: codecov/codecov-action@v1.0.13
       with:
