--- a/letsdecide/package.json
+++ b/letsdecide/package.json
@@ -15,6 +15,8 @@
     "react-firebase-hooks": "^2.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "standard": "^16.0.3",
+    "standardjs": "^1.0.0-alpha",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -40,5 +42,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^7.15.0",
+    "eslint-auto-fix": "^1.0.3",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.21.5"
   }
 }
