--- a/letsdecide/package.json
+++ b/letsdecide/package.json
@@ -44,12 +44,12 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^7.15.0",
-    "eslint-auto-fix": "^1.0.3",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.21.5"
+    "standard": "*"
+  },
+  "standard": {
+    "ignore": [
+      "src/App.test.js"
+    ]
   }
+  
 }
